--- a/src/main/resources/templates/OpenshiftResource/cronJobData.html
+++ b/src/main/resources/templates/OpenshiftResource/cronJobData.html
@@ -3,14 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>FFE CronJob Schedule</title>
-    <!-- <link rel="stylesheet" href="/META-INF/resources/patternfly.css"> -->
 </head>
 <body>
-<div id="mySidenav" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="/openshift/tester-pipelines/cronjobs">List FFE Cronjobs</a>
-    <a href="/">Create FFE CronJob</a>
-</div>
+
+ <!-- #include file="menu.shtml" -->
 
 <!-- Use any element to open the sidenav -->
 <span onclick="openNav()"><h3>Menu</h3></span>
