--- a/src/main/resources/templates/OpenshiftResource/cronJobData.html
+++ b/src/main/resources/templates/OpenshiftResource/cronJobData.html
@@ -6,7 +6,11 @@
 </head>
 <body>
 
- <!-- #include file="menu.shtml" -->
+<div id="mySidenav" class="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="/openshift/tester-pipelines/cronjobs">List FFE Cronjobs</a>
+    <a href="/">Create FFE CronJob Files</a>
+</div>
 
 <!-- Use any element to open the sidenav -->
 <span onclick="openNav()"><h3>Menu</h3></span>
