--- a/src/main/resources/templates/OpenshiftResource/cronJobData.html
+++ b/src/main/resources/templates/OpenshiftResource/cronJobData.html
@@ -2,13 +2,13 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>FFE CronJob Schedule</title>
+    <title>FFE Selenium CronJob Schedule</title>
 </head>
 <body>
 
 <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="/openshift/tester-pipelines/cronjobs">List FFE Cronjobs</a>
+    <a href="/openshift/tester-pipelines/cronjobs">List FFE Selenium Cronjobs</a>
     <a href="/">Create FFE CronJob Files</a>
 </div>
 
@@ -16,11 +16,12 @@
 <!-- Use any element to open the sidenav -->
 <span onclick="openNav()"><h3>Menu</h3></span>
 <div class="container" id="main">
-    <h2>Current List of Selenium CronJobs</h2>
+    <h2>Current List of FFE Selenium CronJobs</h2>
     <table>
         <thead>
             <tr>
                 <th>Name</th>
+                <th>Branch</th>
                 <th>Schedule</th>
                 <th>Schedule Description</th>
             </tr>
@@ -29,6 +30,7 @@
         {#for cronJob in cronJobs}
             <tr>
                 <td>{cronJob.name}</td>
+                <td>{cronJob.branch}</td>
                 <td>{cronJob.schedule}</td>
                 <td>{cronJob.humanReadableMsg}</td>
             </tr>
