--- a/src/main/resources/templates/OpenshiftResource/gatlingCronJobData.html
+++ b/src/main/resources/templates/OpenshiftResource/gatlingCronJobData.html
@@ -6,13 +6,14 @@
 </head>
 <body>
 
-<div id="mySidenav" class="sidenav">
+  <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="/openshift/tester-pipelines/cronjobs">List FFE Cronjobs</a>
+    <a href="/openshift/tester-pipelines/cronjobs">List FFE Selenium Cronjobs</a>
+    <a href="/openshift/tester-pipelines/gatling">List Gatling Cronjobs</a>
+    <a href="/update.html">Update FFE Cronjob Schedule</a>
     <a href="/gatling.html">Create Gatling Cronjob Files</a>
     <a href="/">Create FFE CronJob Files</a>
   </div>
-
 
 <!-- Use any element to open the sidenav -->
 <span onclick="openNav()"><h3>Menu</h3></span>
