Fixed json mapping issue

--- a/src/main/resources/templates/OpenshiftResource/gatlingCronJobData.html
+++ b/src/main/resources/templates/OpenshiftResource/gatlingCronJobData.html
@@ -13,7 +13,7 @@
     <a href="/update.html">Update FFE Cronjob Schedule</a>
     <a href="/gatling.html">Create Gatling Cronjob Files</a>
     <a href="/">Create FFE CronJob Files</a>
-  </div>
+  </div>git 
 
 <!-- Use any element to open the sidenav -->
 <span onclick="openNav()"><h3>Menu</h3></span>
