Added in last time and fixed name

--- a/src/main/resources/templates/OpenshiftResource/cronJobDashboard.html
+++ b/src/main/resources/templates/OpenshiftResource/cronJobDashboard.html
@@ -27,6 +27,7 @@
                 <th>Name</th>
                 <th>Result</th>
                 <th>Message</th>
+                <th>End Run Time</th>
             </tr>
         </thead>
         {#for cronJob in cronJobs}
@@ -36,6 +37,7 @@
                 <td>{cronJob.name}</td>
                 <td>{cronJob.result}</td>
                 <td>{cronJob.msg}</td>
+                <td>{cronJob.lastTransitionTime}</td>
             </tr>
         </tbody>
         {/if}
@@ -48,6 +50,7 @@
                 <th>Name</th>
                 <th>Result</th>
                 <th>Message</th>
+                <th>End Run Time</th>
             </tr>
         </thead>
         {#for cronJob in cronJobs}
@@ -57,6 +60,7 @@
                 <td>{cronJob.name}</td>
                 <td>{cronJob.result}</td>
                 <td>{cronJob.msg}</td>
+                <td>{cronJob.lastTransitionTime}</td>
             </tr>
         </tbody>
         {/if}
@@ -69,6 +73,7 @@
                 <th>Name</th>
                 <th>Result</th>
                 <th>Message</th>
+                <th>End Run Time</th>
             </tr>
         </thead>
         {#for cronJob in cronJobs}
@@ -78,6 +83,7 @@
                 <td>{cronJob.name}</td>
                 <td>{cronJob.result}</td>
                 <td>{cronJob.msg}</td>
+                <td>{cronJob.lastTransitionTime}</td>
             </tr>
         </tbody>
         {/if}
@@ -90,6 +96,7 @@
                 <th>Name</th>
                 <th>Result</th>
                 <th>Message</th>
+                <th>End Run Time</th>
             </tr>
         </thead>
         {#for cronJob in cronJobs}
@@ -99,6 +106,7 @@
                 <td>{cronJob.name}</td>
                 <td>{cronJob.result}</td>
                 <td>{cronJob.msg}</td>
+                <td>{cronJob.lastTransitionTime}</td>
             </tr>
         </tbody>
         {/if}
@@ -111,6 +119,7 @@
                 <th>Name</th>
                 <th>Result</th>
                 <th>Message</th>
+                <th>End Run Time</th>
             </tr>
         </thead>
         {#for cronJob in cronJobs}
@@ -120,6 +129,7 @@
                 <td>{cronJob.name}</td>
                 <td>{cronJob.result}</td>
                 <td>{cronJob.msg}</td>
+                <td>{cronJob.lastTransitionTime}</td>
             </tr>
         </tbody>
         {/if}
@@ -132,6 +142,7 @@
                 <th>Name</th>
                 <th>Result</th>
                 <th>Message</th>
+                <th>End Run Time</th>
             </tr>
         </thead>
         {#for cronJob in cronJobs}
@@ -141,6 +152,7 @@
                 <td>{cronJob.name}</td>
                 <td>{cronJob.result}</td>
                 <td>{cronJob.msg}</td>
+                <td>{cronJob.lastTransitionTime}</td>
             </tr>
         </tbody>
         {/if}
@@ -153,6 +165,7 @@
                 <th>Name</th>
                 <th>Result</th>
                 <th>Message</th>
+                <th>End Run Time</th>
             </tr>
         </thead>
         {#for cronJob in cronJobs}
@@ -162,6 +175,7 @@
                 <td>{cronJob.name}</td>
                 <td>{cronJob.result}</td>
                 <td>{cronJob.msg}</td>
+                <td>{cronJob.lastTransitionTime}</td>
             </tr>
         </tbody>
         {/if}
@@ -174,6 +188,7 @@
                 <th>Name</th>
                 <th>Result</th>
                 <th>Message</th>
+                <th>End Run Time</th>
             </tr>
         </thead>
         {#for cronJob in cronJobs}
@@ -183,6 +198,7 @@
                 <td>{cronJob.name}</td>
                 <td>{cronJob.result}</td>
                 <td>{cronJob.msg}</td>
+                <td>{cronJob.lastTransitionTime}</td>
             </tr>
         </tbody>
         {/if}
