--- a/src/main/resources/templates/OpenshiftResource/cronJobDashboard.html
+++ b/src/main/resources/templates/OpenshiftResource/cronJobDashboard.html
@@ -27,7 +27,7 @@
                 <th>Name</th>
                 <th>Result</th>
                 <th>Message</th>
-                <th>End Run Time</th>
+                <th>Last Upate Time</th>
             </tr>
         </thead>
         {#for cronJob in cronJobs}
@@ -35,8 +35,8 @@
         <tbody>
             <tr>
                 <td>{cronJob.name}</td>
-                <td>{cronJob.result}</td>
-                <td>{cronJob.msg}</td>
+                <td :style="{ backgroundColor: getStatusColor(cronJob.result) }">{cronJob.result}</td>
+                <td >{cronJob.msg}</td>
                 <td>{cronJob.lastTransitionTime}</td>
             </tr>
         </tbody>
@@ -50,7 +50,7 @@
                 <th>Name</th>
                 <th>Result</th>
                 <th>Message</th>
-                <th>End Run Time</th>
+                <th>Last Upate Time</th>
             </tr>
         </thead>
         {#for cronJob in cronJobs}
@@ -73,7 +73,7 @@
                 <th>Name</th>
                 <th>Result</th>
                 <th>Message</th>
-                <th>End Run Time</th>
+                <th>Last Upate Time</th>
             </tr>
         </thead>
         {#for cronJob in cronJobs}
@@ -96,7 +96,7 @@
                 <th>Name</th>
                 <th>Result</th>
                 <th>Message</th>
-                <th>End Run Time</th>
+                <th>Last Upate Time</th>
             </tr>
         </thead>
         {#for cronJob in cronJobs}
@@ -119,7 +119,7 @@
                 <th>Name</th>
                 <th>Result</th>
                 <th>Message</th>
-                <th>End Run Time</th>
+                <th>Last Upate Time</th>
             </tr>
         </thead>
         {#for cronJob in cronJobs}
@@ -142,7 +142,7 @@
                 <th>Name</th>
                 <th>Result</th>
                 <th>Message</th>
-                <th>End Run Time</th>
+                <th>Last Upate Time</th>
             </tr>
         </thead>
         {#for cronJob in cronJobs}
@@ -165,7 +165,7 @@
                 <th>Name</th>
                 <th>Result</th>
                 <th>Message</th>
-                <th>End Run Time</th>
+                <th>Last Upate Time</th>
             </tr>
         </thead>
         {#for cronJob in cronJobs}
@@ -188,7 +188,7 @@
                 <th>Name</th>
                 <th>Result</th>
                 <th>Message</th>
-                <th>End Run Time</th>
+                <th>Last Upate Time</th>
             </tr>
         </thead>
         {#for cronJob in cronJobs}
@@ -210,6 +210,34 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="/index.js"></script>
+<script>
+export default {
+  data() {
+    return {
+      cronJob: {
+        result: 'Succeeded'
+      }
+    }
+  },
+  methods: {
+    getStatusColor(status) {
+      switch (status) {
+        case 'Succeeded':
+          return 'green'
+        case 'Running':
+          return 'yellow'
+        case 'Failed':
+          return 'red'
+        default:
+          return 'white'
+      }
+    }
+  }
+}
+</script>
+
+
+
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
