--- a/src/main/resources/templates/OpenshiftResource/cronJobDashboard.html
+++ b/src/main/resources/templates/OpenshiftResource/cronJobDashboard.html
@@ -35,7 +35,7 @@
         <tbody>
             <tr>
                 <td>{cronJob.name}</td>
-                <td style="{ backgroundColor: getStatusColor(cronJob.result) }">{cronJob.result}</td>
+                <td bgcolor="{cronJob.color}">{cronJob.result}</td>
                 <td >{cronJob.msg}</td>
                 <td>{cronJob.lastTransitionTime}</td>
             </tr>
@@ -210,20 +210,6 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="/index.js"></script>
-<script>
-  function getStatusColor(status) {
-      switch (status) {
-        case 'Succeeded':
-          return 'green';
-        case 'Running':
-          return 'yellow';
-        case 'Failed':
-          return 'red';
-        default:
-          return 'white';
-      }
-    }
-</script>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
