--- a/src/main/resources/templates/OpenshiftResource/cronJobDashboard.html
+++ b/src/main/resources/templates/OpenshiftResource/cronJobDashboard.html
@@ -58,7 +58,7 @@
         <tbody>
              <tr>
                 <td>{cronJob.name}</td>
-                <td>{cronJob.result}</td>
+                <td bgcolor="{cronJob.color}">{cronJob.result}</td>
                 <td>{cronJob.msg}</td>
                 <td>{cronJob.lastTransitionTime}</td>
             </tr>
@@ -81,7 +81,7 @@
         <tbody>
             <tr>
                 <td>{cronJob.name}</td>
-                <td>{cronJob.result}</td>
+                <td bgcolor="{cronJob.color}">{cronJob.result}</td>
                 <td>{cronJob.msg}</td>
                 <td>{cronJob.lastTransitionTime}</td>
             </tr>
@@ -104,7 +104,7 @@
         <tbody>
             <tr>
                 <td>{cronJob.name}</td>
-                <td>{cronJob.result}</td>
+                <td bgcolor="{cronJob.color}">{cronJob.result}</td>
                 <td>{cronJob.msg}</td>
                 <td>{cronJob.lastTransitionTime}</td>
             </tr>
@@ -127,7 +127,7 @@
         <tbody>
             <tr>
                 <td>{cronJob.name}</td>
-                <td>{cronJob.result}</td>
+                <td bgcolor="{cronJob.color}">{cronJob.result}</td>
                 <td>{cronJob.msg}</td>
                 <td>{cronJob.lastTransitionTime}</td>
             </tr>
@@ -150,7 +150,7 @@
         <tbody>
              <tr>
                 <td>{cronJob.name}</td>
-                <td>{cronJob.result}</td>
+                <td bgcolor="{cronJob.color}">{cronJob.result}</td>
                 <td>{cronJob.msg}</td>
                 <td>{cronJob.lastTransitionTime}</td>
             </tr>
@@ -173,7 +173,7 @@
         <tbody>
              <tr>
                 <td>{cronJob.name}</td>
-                <td>{cronJob.result}</td>
+                <td bgcolor="{cronJob.color}">{cronJob.result}</td>
                 <td>{cronJob.msg}</td>
                 <td>{cronJob.lastTransitionTime}</td>
             </tr>
@@ -196,7 +196,7 @@
         <tbody>
              <tr>
                 <td>{cronJob.name}</td>
-                <td>{cronJob.result}</td>
+                <td bgcolor="{cronJob.color}">{cronJob.result}</td>
                 <td>{cronJob.msg}</td>
                 <td>{cronJob.lastTransitionTime}</td>
             </tr>
