--- a/src/main/resources/templates/OpenshiftResource/cronJobDashboard.html
+++ b/src/main/resources/templates/OpenshiftResource/cronJobDashboard.html
@@ -26,6 +26,7 @@
             <tr>
                 <th>Name</th>
                 <th>Result</th>
+                <th>Link</th>
                 <th>Last Upate Time</th>
             </tr>
         </thead>
@@ -35,6 +36,7 @@
             <tr>
                 <td>{cronJob.name}</td>
                 <td bgcolor="{cronJob.color}">{cronJob.result}</td>
+                <td><A href="{cronJob.runLink}">Link to Logs</A></td>
                 <td>{cronJob.lastTransitionTime}</td>
             </tr>
         </tbody>
@@ -47,6 +49,7 @@
             <tr>
                 <th>Name</th>
                 <th>Result</th>
+                <th>Link</th>
                 <th>Last Upate Time</th>
             </tr>
         </thead>
@@ -56,6 +59,7 @@
              <tr>
                 <td>{cronJob.name}</td>
                 <td bgcolor="{cronJob.color}">{cronJob.result}</td>
+                <td><A href="{cronJob.runLink}">Link to Logs</A></td>
                 <td>{cronJob.lastTransitionTime}</td>
             </tr>
         </tbody>
@@ -68,6 +72,7 @@
              <tr>
                 <th>Name</th>
                 <th>Result</th>
+                <th>Link</th>
                 <th>Last Upate Time</th>
             </tr>
         </thead>
@@ -77,6 +82,7 @@
             <tr>
                 <td>{cronJob.name}</td>
                 <td bgcolor="{cronJob.color}">{cronJob.result}</td>
+                <td><A href="{cronJob.runLink}">Link to Logs</A></td>
                 <td>{cronJob.lastTransitionTime}</td>
             </tr>
         </tbody>
@@ -89,6 +95,7 @@
             <tr>
                 <th>Name</th>
                 <th>Result</th>
+                <th>Link</th>
                 <th>Last Upate Time</th>
             </tr>
         </thead>
@@ -98,6 +105,7 @@
             <tr>
                 <td>{cronJob.name}</td>
                 <td bgcolor="{cronJob.color}">{cronJob.result}</td>
+                <td><A href="{cronJob.runLink}">Link to Logs</A></td>
                 <td>{cronJob.lastTransitionTime}</td>
             </tr>
         </tbody>
@@ -110,6 +118,7 @@
             <tr>
                 <th>Name</th>
                 <th>Result</th>
+                <th>Link</th>
                 <th>Last Upate Time</th>
             </tr>
         </thead>
@@ -119,6 +128,7 @@
             <tr>
                 <td>{cronJob.name}</td>
                 <td bgcolor="{cronJob.color}">{cronJob.result}</td>
+                <td><A href="{cronJob.runLink}">Link to Logs</A></td>
                 <td>{cronJob.lastTransitionTime}</td>
             </tr>
         </tbody>
@@ -131,6 +141,7 @@
              <tr>
                 <th>Name</th>
                 <th>Result</th>
+                <th>Link</th>
                 <th>Last Upate Time</th>
             </tr>
         </thead>
@@ -140,6 +151,7 @@
              <tr>
                 <td>{cronJob.name}</td>
                 <td bgcolor="{cronJob.color}">{cronJob.result}</td>
+                <td><A href="{cronJob.runLink}">Link to Logs</A></td>
                 <td>{cronJob.lastTransitionTime}</td>
             </tr>
         </tbody>
@@ -152,6 +164,7 @@
             <tr>
                 <th>Name</th>
                 <th>Result</th>
+                <th>Link</th>
                 <th>Last Upate Time</th>
             </tr>
         </thead>
@@ -161,6 +174,7 @@
              <tr>
                 <td>{cronJob.name}</td>
                 <td bgcolor="{cronJob.color}">{cronJob.result}</td>
+                <td><A href="{cronJob.runLink}">Link to Logs</A></td>
                 <td>{cronJob.lastTransitionTime}</td>
             </tr>
         </tbody>
@@ -173,6 +187,7 @@
             <tr>
                 <th>Name</th>
                 <th>Result</th>
+                <th>Link</th>
                 <th>Last Upate Time</th>
             </tr>
         </thead>
@@ -182,6 +197,7 @@
              <tr>
                 <td>{cronJob.name}</td>
                 <td bgcolor="{cronJob.color}">{cronJob.result}</td>
+                <td><A href="{cronJob.runLink}">Link to Logs</A></td>
                 <td>{cronJob.lastTransitionTime}</td>
             </tr>
         </tbody>
