--- a/src/main/resources/templates/OpenshiftResource/cronJobDashboard.html
+++ b/src/main/resources/templates/OpenshiftResource/cronJobDashboard.html
@@ -26,6 +26,7 @@
             <tr>
                 <th>Name</th>
                 <th>Result</th>
+                <th>Test Results</th>
                 <th>Link</th>
                 <th>Last Upate Time</th>
             </tr>
@@ -36,6 +37,7 @@
             <tr>
                 <td>{cronJob.name}</td>
                 <td bgcolor="{cronJob.color}">{cronJob.result}</td>
+                <td>{cronJob.msg}</td>
                 <td><A href="{cronJob.runLink}">Link to Logs</A></td>
                 <td>{cronJob.lastTransitionTime}</td>
             </tr>
@@ -49,6 +51,7 @@
             <tr>
                 <th>Name</th>
                 <th>Result</th>
+                <th>Test Results</th>
                 <th>Link</th>
                 <th>Last Upate Time</th>
             </tr>
@@ -59,6 +62,7 @@
              <tr>
                 <td>{cronJob.name}</td>
                 <td bgcolor="{cronJob.color}">{cronJob.result}</td>
+                <td>{cronJob.msg}</td>
                 <td><A href="{cronJob.runLink}">Link to Logs</A></td>
                 <td>{cronJob.lastTransitionTime}</td>
             </tr>
@@ -72,6 +76,7 @@
              <tr>
                 <th>Name</th>
                 <th>Result</th>
+                <th>Test Results</th>
                 <th>Link</th>
                 <th>Last Upate Time</th>
             </tr>
@@ -82,6 +87,7 @@
             <tr>
                 <td>{cronJob.name}</td>
                 <td bgcolor="{cronJob.color}">{cronJob.result}</td>
+                <td>{cronJob.msg}</td>
                 <td><A href="{cronJob.runLink}">Link to Logs</A></td>
                 <td>{cronJob.lastTransitionTime}</td>
             </tr>
@@ -95,6 +101,7 @@
             <tr>
                 <th>Name</th>
                 <th>Result</th>
+                <th>Test Results</th>
                 <th>Link</th>
                 <th>Last Upate Time</th>
             </tr>
@@ -105,6 +112,7 @@
             <tr>
                 <td>{cronJob.name}</td>
                 <td bgcolor="{cronJob.color}">{cronJob.result}</td>
+                <td>{cronJob.msg}</td>
                 <td><A href="{cronJob.runLink}">Link to Logs</A></td>
                 <td>{cronJob.lastTransitionTime}</td>
             </tr>
@@ -118,6 +126,7 @@
             <tr>
                 <th>Name</th>
                 <th>Result</th>
+                <th>Test Results</th>
                 <th>Link</th>
                 <th>Last Upate Time</th>
             </tr>
@@ -128,6 +137,7 @@
             <tr>
                 <td>{cronJob.name}</td>
                 <td bgcolor="{cronJob.color}">{cronJob.result}</td>
+                <td>{cronJob.msg}</td>
                 <td><A href="{cronJob.runLink}">Link to Logs</A></td>
                 <td>{cronJob.lastTransitionTime}</td>
             </tr>
@@ -141,6 +151,7 @@
              <tr>
                 <th>Name</th>
                 <th>Result</th>
+                <th>Test Results</th>
                 <th>Link</th>
                 <th>Last Upate Time</th>
             </tr>
@@ -151,6 +162,7 @@
              <tr>
                 <td>{cronJob.name}</td>
                 <td bgcolor="{cronJob.color}">{cronJob.result}</td>
+                <td>{cronJob.msg}</td>
                 <td><A href="{cronJob.runLink}">Link to Logs</A></td>
                 <td>{cronJob.lastTransitionTime}</td>
             </tr>
@@ -164,6 +176,7 @@
             <tr>
                 <th>Name</th>
                 <th>Result</th>
+                <th>Test Results</th>
                 <th>Link</th>
                 <th>Last Upate Time</th>
             </tr>
@@ -174,6 +187,7 @@
              <tr>
                 <td>{cronJob.name}</td>
                 <td bgcolor="{cronJob.color}">{cronJob.result}</td>
+                <td>{cronJob.msg}</td>
                 <td><A href="{cronJob.runLink}">Link to Logs</A></td>
                 <td>{cronJob.lastTransitionTime}</td>
             </tr>
@@ -187,6 +201,7 @@
             <tr>
                 <th>Name</th>
                 <th>Result</th>
+                <th>Test Results</th>
                 <th>Link</th>
                 <th>Last Upate Time</th>
             </tr>
@@ -197,6 +212,7 @@
              <tr>
                 <td>{cronJob.name}</td>
                 <td bgcolor="{cronJob.color}">{cronJob.result}</td>
+                <td>{cronJob.msg}</td>
                 <td><A href="{cronJob.runLink}">Link to Logs</A></td>
                 <td>{cronJob.lastTransitionTime}</td>
             </tr>
