Added in RunTime to HTML

--- a/src/main/resources/templates/OpenshiftResource/cronJobDashboard.html
+++ b/src/main/resources/templates/OpenshiftResource/cronJobDashboard.html
@@ -27,8 +27,9 @@
                 <th>Name</th>
                 <th>Result</th>
                 <th>Test Results</th>
+                <th>Run Time</th>
                 <th>Link</th>
-                <th>Last Upate Time</th>
+                <th>Finish Time</th>
             </tr>
         </thead>
         {#for cronJob in cronJobs}
@@ -38,6 +39,7 @@
                 <td>{cronJob.name}</td>
                 <td bgcolor="{cronJob.color}">{cronJob.result}</td>
                 <td>{cronJob.msg}</td>
+                <td>{cronJob.runTime}</td>
                 <td><A href="{cronJob.runLink}">Link to Logs</A></td>
                 <td>{cronJob.lastTransitionTime}</td>
             </tr>
@@ -52,6 +54,7 @@
                 <th>Name</th>
                 <th>Result</th>
                 <th>Test Results</th>
+                <th>Run Time</th>
                 <th>Link</th>
                 <th>Last Upate Time</th>
             </tr>
@@ -63,6 +66,7 @@
                 <td>{cronJob.name}</td>
                 <td bgcolor="{cronJob.color}">{cronJob.result}</td>
                 <td>{cronJob.msg}</td>
+                <td>{cronJob.runTime}</td>
                 <td><A href="{cronJob.runLink}">Link to Logs</A></td>
                 <td>{cronJob.lastTransitionTime}</td>
             </tr>
@@ -77,6 +81,7 @@
                 <th>Name</th>
                 <th>Result</th>
                 <th>Test Results</th>
+                <th>Run Time</th>
                 <th>Link</th>
                 <th>Last Upate Time</th>
             </tr>
@@ -88,6 +93,7 @@
                 <td>{cronJob.name}</td>
                 <td bgcolor="{cronJob.color}">{cronJob.result}</td>
                 <td>{cronJob.msg}</td>
+                <td>{cronJob.runTime}</td>
                 <td><A href="{cronJob.runLink}">Link to Logs</A></td>
                 <td>{cronJob.lastTransitionTime}</td>
             </tr>
@@ -102,6 +108,7 @@
                 <th>Name</th>
                 <th>Result</th>
                 <th>Test Results</th>
+                <th>Run Time</th>
                 <th>Link</th>
                 <th>Last Upate Time</th>
             </tr>
@@ -113,6 +120,7 @@
                 <td>{cronJob.name}</td>
                 <td bgcolor="{cronJob.color}">{cronJob.result}</td>
                 <td>{cronJob.msg}</td>
+                <td>{cronJob.runTime}</td>
                 <td><A href="{cronJob.runLink}">Link to Logs</A></td>
                 <td>{cronJob.lastTransitionTime}</td>
             </tr>
@@ -127,6 +135,7 @@
                 <th>Name</th>
                 <th>Result</th>
                 <th>Test Results</th>
+                <th>Run Time</th>
                 <th>Link</th>
                 <th>Last Upate Time</th>
             </tr>
@@ -138,6 +147,7 @@
                 <td>{cronJob.name}</td>
                 <td bgcolor="{cronJob.color}">{cronJob.result}</td>
                 <td>{cronJob.msg}</td>
+                <td>{cronJob.runTime}</td>
                 <td><A href="{cronJob.runLink}">Link to Logs</A></td>
                 <td>{cronJob.lastTransitionTime}</td>
             </tr>
@@ -152,6 +162,7 @@
                 <th>Name</th>
                 <th>Result</th>
                 <th>Test Results</th>
+                <th>Run Time</th>
                 <th>Link</th>
                 <th>Last Upate Time</th>
             </tr>
@@ -163,6 +174,7 @@
                 <td>{cronJob.name}</td>
                 <td bgcolor="{cronJob.color}">{cronJob.result}</td>
                 <td>{cronJob.msg}</td>
+                <td>{cronJob.runTime}</td>
                 <td><A href="{cronJob.runLink}">Link to Logs</A></td>
                 <td>{cronJob.lastTransitionTime}</td>
             </tr>
@@ -177,6 +189,7 @@
                 <th>Name</th>
                 <th>Result</th>
                 <th>Test Results</th>
+                <th>Run Time</th>
                 <th>Link</th>
                 <th>Last Upate Time</th>
             </tr>
@@ -188,6 +201,7 @@
                 <td>{cronJob.name}</td>
                 <td bgcolor="{cronJob.color}">{cronJob.result}</td>
                 <td>{cronJob.msg}</td>
+                <td>{cronJob.runTime}</td>
                 <td><A href="{cronJob.runLink}">Link to Logs</A></td>
                 <td>{cronJob.lastTransitionTime}</td>
             </tr>
@@ -202,6 +216,7 @@
                 <th>Name</th>
                 <th>Result</th>
                 <th>Test Results</th>
+                <th>Run Time</th>
                 <th>Link</th>
                 <th>Last Upate Time</th>
             </tr>
@@ -213,6 +228,7 @@
                 <td>{cronJob.name}</td>
                 <td bgcolor="{cronJob.color}">{cronJob.result}</td>
                 <td>{cronJob.msg}</td>
+                <td>{cronJob.runTime}</td>
                 <td><A href="{cronJob.runLink}">Link to Logs</A></td>
                 <td>{cronJob.lastTransitionTime}</td>
             </tr>
