Added links in menu to Update

--- a/src/main/resources/templates/OpenshiftResource/gatlingCronJobData.html
+++ b/src/main/resources/templates/OpenshiftResource/gatlingCronJobData.html
@@ -11,6 +11,7 @@
     <a href="/openshift/tester-pipelines/cronjobs">List FFE Selenium Cronjobs</a>
     <a href="/openshift/tester-pipelines/gatling">List Gatling Cronjobs</a>
     <a href="/openshift/tester-pipelines/dashboard">FFE Selenum Dashboard</a>
+    <a href="/update.html">Update FFE Selenium Cronjobs Schedule</a>
     <a href="/gatling.html">Create Gatling Cronjob Files</a>
     <a href="/">Create FFE CronJob Files</a>
   </div>git 
