--- a/src/main/resources/templates/OpenshiftResource/cronJobData.html
+++ b/src/main/resources/templates/OpenshiftResource/cronJobData.html
@@ -5,18 +5,8 @@
     <title>FFE Selenium CronJob Schedule</title>
 </head>
 <body>
-
-  <div id="mySidenav" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="/openshift/tester-pipelines/cronjobs">List FFE Selenium Cronjobs</a>
-    <a href="/openshift/tester-pipelines/gatling">List Gatling Cronjobs</a>
-    <a href="/openshift/tester-pipelines/dashboard">FFE Selenum Dashboard</a>
-    <a href="/update.html">Update FFE Selenium Cronjobs Schedule</a>
-    <a href="/gatling.html">Create Gatling Cronjob Files</a>
-    <a href="/">Create FFE CronJob Files</a>
-  </div>
-
-
+{#include menu.html}
+{/include}
 <!-- Use any element to open the sidenav -->
 <span onclick="openNav()"><h3>Menu</h3></span>
 <div class="container" id="main">
