--- a/src/main/resources/templates/OpenshiftResource/cronJobDashboard.html
+++ b/src/main/resources/templates/OpenshiftResource/cronJobDashboard.html
@@ -12,9 +12,9 @@
 <span onclick="openNav()"><h3>Menu</h3></span>
 <div class="container" id="main">
     <h2>Current List of FFE Selenium Pipeline Runs</h2>
-    <input type="text" id="cronJobFilter" onkeyup="filterCronJobs()" placeholder="Search for names..">
+    <input type="text" id="cronJobFilter" onclick="filterCronJobs()" placeholder="Search for names..">
     <h3>Test 1</h3>
-    <table>
+    <table id="test1">
         <thead>
             <tr>
                 <th>Name</th>
@@ -41,7 +41,7 @@
         {/for}
     </table>
     <h3>Test 2</h3>
-    <table>
+    <table id="test2">
         <thead>
             <tr>
                 <th>Name</th>
@@ -68,7 +68,7 @@
         {/for}
     </table>
     <h3>Test 3</h3>
-    <table>
+    <table id="test3">
         <thead>
             <tr>
                 <th>Name</th>
@@ -95,7 +95,7 @@
         {/for}
     </table>
     <h3>Test4</h3>
-    <table>
+    <table id="test4">
         <thead>
             <tr>
                 <th>Name</th>
