--- a/src/main/resources/templates/OpenshiftResource/gatlingCronJobData.html
+++ b/src/main/resources/templates/OpenshiftResource/gatlingCronJobData.html
@@ -33,11 +33,11 @@
     </table>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="/index.js"></script>
+<script src="/js/index.js"></script>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
-<link rel="stylesheet" href="/index.css">
+<link rel="stylesheet" href="/css/index.css">
 
 </body>
 </html>
