--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -2,7 +2,7 @@
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="/openshift/tester-pipelines/cronjobs">List FFE Selenium Cronjobs</a>
     <a href="/openshift/tester-pipelines/gatling">List Gatling Cronjobs</a>
-    <a href="/openshift/tester-pipelines/dashboard">FFE Selenum Dashboard</a>
+    <a href="/loading.html">FFE Selenum Dashboard</a>
     <a href="/update.html">Update FFE Selenium Cronjobs Schedule</a>
     <a href="/gatling.html">Create Gatling Cronjob Files</a>
     <a href="/">Create FFE CronJob Files</a>
