--- a/src/main/resources/templates/OpenshiftResource/cronJobData.html
+++ b/src/main/resources/templates/OpenshiftResource/cronJobData.html
@@ -11,9 +11,9 @@
 <span onclick="openNav()"><h3>Menu</h3></span>
 <div class="container" id="main">
     <h2>Current List of FFE Selenium CronJobs</h2>
-   
-    <h3>Rvregression</h3>
-    <table>
+    <input type="text" id="searchInput" onkeyup="searchTables()" placeholder="Search for names..">
+    <h3>Test 1</h3>
+    <table id="test1">
         <thead>
             <tr>
                 <th>Name</th>
@@ -23,7 +23,7 @@
             </tr>
         </thead>
         {#for cronJob in cronJobs}
-        {#if cronJob.type == "rvregression"}
+        {#if cronJob.env == "test1"}
         <tbody>
             <tr>
                 <td>{cronJob.name}</td>
@@ -35,8 +35,8 @@
         {/if}
         {/for}
     </table>
-    <h3>Rvsmoke</h3>
-    <table>
+    <h3>Test 2</h3>
+    <table id="test2">
         <thead>
             <tr>
                 <th>Name</th>
@@ -46,7 +46,7 @@
             </tr>
         </thead>
         {#for cronJob in cronJobs}
-        {#if cronJob.type == "rvsmoke"}
+        {#if cronJob.env == "test2"}
         <tbody>
             <tr>
                 <td>{cronJob.name}</td>
@@ -58,8 +58,8 @@
         {/if}
         {/for}
     </table>
-    <h3>Serffregression</h3>
-    <table>
+    <h3>Test 3</h3>
+    <table id ="test3">
         <thead>
             <tr>
                 <th>Name</th>
@@ -69,7 +69,7 @@
             </tr>
         </thead>
         {#for cronJob in cronJobs}
-        {#if cronJob.type == "serffregression"}
+        {#if cronJob.env == "test3"}
         <tbody>
             <tr>
                 <td>{cronJob.name}</td>
@@ -81,8 +81,8 @@
         {/if}
         {/for}
     </table>
-    <h3>Serffsmoke</h3>
-    <table>
+    <h3>Test 4</h3>
+    <table id="test4">
         <thead>
             <tr>
                 <th>Name</th>
@@ -92,7 +92,7 @@
             </tr>
         </thead>
         {#for cronJob in cronJobs}
-        {#if cronJob.type == "serffsmoke"}
+        {#if cronJob.env == "test4"}
         <tbody>
             <tr>
                 <td>{cronJob.name}</td>
@@ -104,8 +104,8 @@
         {/if}
         {/for}
     </table>
-    <h3>Subregression</h3>
-    <table>
+    <h3>Test 9</h3>
+    <table id="test9">
         <thead>
             <tr>
                 <th>Name</th>
@@ -115,76 +115,7 @@
             </tr>
         </thead>
         {#for cronJob in cronJobs}
-        {#if cronJob.type == "subregression"}
-        <tbody>
-            <tr>
-                <td>{cronJob.name}</td>
-                <td>{cronJob.branch}</td>
-                <td>{cronJob.schedule}</td>
-                <td>{cronJob.humanReadableMsg}</td>
-            </tr>
-        </tbody>
-        {/if}
-        {/for}
-    </table>
-    <h3>Subsmoketest</h3>
-    <table>
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Branch</th>
-                <th>Schedule</th>
-                <th>Schedule Description</th>
-            </tr>
-        </thead>
-        {#for cronJob in cronJobs}
-        {#if cronJob.type == "subsmoketest"}
-        <tbody>
-            <tr>
-                <td>{cronJob.name}</td>
-                <td>{cronJob.branch}</td>
-                <td>{cronJob.schedule}</td>
-                <td>{cronJob.humanReadableMsg}</td>
-            </tr>
-        </tbody>
-        {/if}
-        {/for}
-    </table>
-    <h3>Veregression</h3>
-    <table>
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Branch</th>
-                <th>Schedule</th>
-                <th>Schedule Description</th>
-            </tr>
-        </thead>
-        {#for cronJob in cronJobs}
-        {#if cronJob.type == "veregression"}
-        <tbody>
-            <tr>
-                <td>{cronJob.name}</td>
-                <td>{cronJob.branch}</td>
-                <td>{cronJob.schedule}</td>
-                <td>{cronJob.humanReadableMsg}</td>
-            </tr>
-        </tbody>
-        {/if}
-        {/for}
-    </table>
-    <h3>Vesmoke</h3>
-    <table>
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Branch</th>
-                <th>Schedule</th>
-                <th>Schedule Description</th>
-            </tr>
-        </thead>
-        {#for cronJob in cronJobs}
-        {#if cronJob.type == "vesmoke"}
+        {#if cronJob.env == "test9"}
         <tbody>
             <tr>
                 <td>{cronJob.name}</td>
