--- a/src/main/resources/templates/OpenshiftResource/cronJobDashboard.html
+++ b/src/main/resources/templates/OpenshiftResource/cronJobDashboard.html
@@ -19,6 +19,7 @@
                 <th>Name</th>
                 <th>Result</th>
                 <th>Test Results</th>
+                <th>Test Failures</th>
                 <th>Run Time</th>
                 <th>Link</th>
                 <th>Finish Time</th>
@@ -31,6 +32,7 @@
                 <td class="cronjobName">{cronJob.name}</td>
                 <td bgcolor="{cronJob.color}">{cronJob.result}</td>
                 <td>{cronJob.msg}</td>
+                <td class="reveal-cell">{cronJob.failedTests}</td>
                 <td>{cronJob.runTime}</td>
                 <td><A href="{cronJob.runLink}">Link to Logs</A></td>
                 <td>{cronJob.lastTransitionTime}</td>
@@ -46,6 +48,7 @@
                 <th>Name</th>
                 <th>Result</th>
                 <th>Test Results</th>
+                <th>Test Failures</th>
                 <th>Run Time</th>
                 <th>Link</th>
                 <th>Last Upate Time</th>
@@ -58,6 +61,7 @@
                 <td class="cronjobName">{cronJob.name}</td>
                 <td bgcolor="{cronJob.color}">{cronJob.result}</td>
                 <td>{cronJob.msg}</td>
+                <td class="reveal-cell">{cronJob.failedTests}</td>
                 <td>{cronJob.runTime}</td>
                 <td><A href="{cronJob.runLink}">Link to Logs</A></td>
                 <td>{cronJob.lastTransitionTime}</td>
@@ -73,6 +77,7 @@
                 <th>Name</th>
                 <th>Result</th>
                 <th>Test Results</th>
+                <th>Test Failures</th>
                 <th>Run Time</th>
                 <th>Link</th>
                 <th>Last Upate Time</th>
@@ -85,6 +90,7 @@
                 <td class="cronjobName">{cronJob.name}</td>
                 <td bgcolor="{cronJob.color}">{cronJob.result}</td>
                 <td>{cronJob.msg}</td>
+                <td class="reveal-cell">{cronJob.failedTests}</td>
                 <td>{cronJob.runTime}</td>
                 <td><A href="{cronJob.runLink}">Link to Logs</A></td>
                 <td>{cronJob.lastTransitionTime}</td>
@@ -100,6 +106,7 @@
                 <th>Name</th>
                 <th>Result</th>
                 <th>Test Results</th>
+                <th>Test Failures</th>
                 <th>Run Time</th>
                 <th>Link</th>
                 <th>Last Upate Time</th>
@@ -112,6 +119,7 @@
                 <td class="cronjobName">{cronJob.name}</td>
                 <td bgcolor="{cronJob.color}">{cronJob.result}</td>
                 <td>{cronJob.msg}</td>
+                <td class="reveal-cell">{cronJob.failedTests}</td>
                 <td>{cronJob.runTime}</td>
                 <td><A href="{cronJob.runLink}">Link to Logs</A></td>
                 <td>{cronJob.lastTransitionTime}</td>
@@ -127,6 +135,7 @@
                 <th>Name</th>
                 <th>Result</th>
                 <th>Test Results</th>
+                <th>Test Failures</th>
                 <th>Run Time</th>
                 <th>Link</th>
                 <th>Last Upate Time</th>
@@ -139,6 +148,7 @@
                 <td class="cronjobName">{cronJob.name}</td>
                 <td bgcolor="{cronJob.color}">{cronJob.result}</td>
                 <td>{cronJob.msg}</td>
+                <td class="reveal-cell">{cronJob.failedTests}</td>
                 <td>{cronJob.runTime}</td>
                 <td><A href="{cronJob.runLink}">Link to Logs</A></td>
                 <td>{cronJob.lastTransitionTime}</td>
@@ -150,7 +160,7 @@
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="/js/index.js"></script>
+<script src="/js/cronjobTable.js"></script>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
